# bevy_rl

./: .cursorrules  .devenv.flake.nix  .gitignore  .pre-commit-config.yaml  .windsurfrules  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  README.md  rustfmt.toml
.cursor/rules/: bevy-assets.mdc  bevy-ecs.mdc  bevy-events.mdc  bevy-input.mdc  bevy-performance.mdc  bevy-plugins.mdc  bevy-states.mdc  bevy-ui.mdc
.devenv/: input-paths.txt  nix-eval-cache.db-shm  nix-eval-cache.db-wal  profile  run
.devenv/gc/: shell-1-link
brtk/: Cargo.toml
brtk/src/: lib.rs
brtk/src/grid/: grid.rs
src/: app_settings.rs  main.rs
src/controller/: controller_plugin.rs
src/controller/systems/: keyboard_input.rs
src/model/: mod.rs  model_constants.rs  model_plugin.rs
src/model/actions/: wait.rs  walk.rs
src/model/commands/: try_move.rs
src/model/components/: actor.rs  mod.rs  player.rs  position.rs  terrain_type.rs  turn.rs
src/model/generation/: dungeon_generator.rs  mod.rs  room.rs
src/model/resources/: action_queue.rs  current_map.rs  fov_map.rs  map.rs  mod.rs  spawn_point.rs  turn_queue.rs
src/model/systems/: fov.rs  mod.rs  process.rs  spawn_map.rs  spawn_player.rs
src/model/types/: direction.rs
src/model/utils/: spawner.rs
src/ui/: ui_constants.rs
src/ui/systems/: spawn_camera.rs
src/view/: view_constants.rs  view_plugin.rs
src/view/components/: tile_sprite.rs
src/view/resources/: mod.rs  tilemap.rs
src/view/systems/: add_sprite_to_player.rs  add_sprite_to_tile.rs  ascii_renderer.rs  init_tilemap.rs  mod.rs  position_to_transform.rs  sprite_visibility.rs
src/view/utils/: mod.rs  spawner.rs
